--- a/source/_posts/平时小问题.md
+++ b/source/_posts/平时小问题.md
@@ -10,6 +10,14 @@ tags:
     eclipse
     IDEA
 ---
+###### oracle 树形结构查询
+```
+SELECT T.GROUP_ID,T.NAME,SUBSTR(SYS_CONNECT_BY_PATH(T.NAME, '>'),2) TREE_PATH   
+            FROM
+                VIEW_GROUPINFOPROVIDE T START WITH GROUP_ID =11191793
+                    CONNECT BY PRIOR GROUP_ID = parent_group_id
+```
+
 ###### dubbo 获取错误ip地址
 ```
     JAVA_OPTIONS="-Ddubbo.protocol.host=192.168.1.111
