--- a/source/_posts/数学.md
+++ b/source/_posts/数学.md
@@ -6,6 +6,992 @@ tags:  empty blank guava commons-lang3
 
 
 
+张筑生的数学分析三本（深入浅出）
+
+常庚哲 史济怀的数学分析两本（口碑不错）
+
+丘维声的高等代数（白色新版，有习题书配套，和教材的内容差不多的，有钱都买，没钱选一个）
+
+蓝以中的高等代数+解题指南
+
+李尚志的线性代数（数学专业用，良心教材）
+
+解析几何（吕林根，丘维声or尤承业，学来玩玩）
+
+数学分析八讲（课外书来消遣）
+
+线性代数应该这样学（名字很俗啊，好东西）
+
+数学分析（卓里奇难些，菲赫金哥尔茨适中）
+
+柯斯特利金的代数学三本+新出的习题集
+
+常微分方程（王高雄基础，丁同仁大作，庞特里亚金严谨，阿诺尔德神作）
+
+复变函数（钟玉泉基础，史济怀好书）
+
+实变函数（王声望入门，周民强奇作，那汤松）
+
+陈维桓的微分几何+例题详解
+
+Do carmo的曲线与曲面的微分几何（大力推荐）
+
+陈景润的数论三本（深入浅出，可读性强）
+
+冯克勤的近世代数+300题（谁用谁知道）
+
+Artin的代数（大力推荐）
+
+Munkres的拓扑学（不可多得的好书，入门）
+
+
+
+作者：余同学
+链接：https://www.zhihu.com/question/414613339/answer/1423766532
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+## 1.部分大学常用数学分析教材
+
+### 清华大学
+
+《数学分析教程》常庚哲.史济怀.
+《数学分析》(三册).何琛 史济怀 徐森林
+《数学分析》(三册).徐森林,金亚东.薛春华
+《数学分析讲义》(三册).陈天权
+《数学分析习题课讲义》谢惠民等
+
+### 北京大学
+
+《数学分析》沈燮昌著第一册，方企勤著第二册，廖可人、李正元著第三册
+《数学分析习题课教材》（第一版）
+《数学分析解题指南》（第二版）林源渠，方企勤
+《数学分析习题集》林源渠，方企勤等
+《数学分析新讲》张筑生(三册)
+《数学分析简明教程》邓东皋,尹小玲著
+《数学分析上、下册》彭立中、谭小江著
+
+复旦大学
+《数学分析》
+《数学分析》陈传璋，金福临，朱学炎，欧阳光中著第二版
+《数学分析》欧阳光中，朱学炎，金福临，陈传璋著第三版
+《数学分析》陈纪修等著
+《数学分析》欧阳光中，姚允龙著
+
+同济大学
+《高等数学》（同济大学数学系第六版,上、下册）
+《高等数学讲义》樊映川等编.
+
+华东师范大学
+《数学分析》华东师范大学数学系著
+《数学分析精读讲义》华东师范大学数学系著
+《数学分析习题精解》吴良森，毛羽辉等
+
+中国科学技术大学
+《数学分析教程》常庚哲，史济怀著
+《简明微积分》龚昇
+《高等数学引论》华罗庚
+《数学分析》徐森林著
+《数学分析的方法及例题选讲》徐利治
+
+南开大学
+《数学分析上、下册》李成章，黄玉民
+《在南开大学的演讲》陈省身
+
+南京大学
+《数学分析讲义》梅加强
+《数学分析教程》许绍浦等
+
+北京师范大学
+《简明数学分析（第一版）》王昆扬
+《简明数学分析（第二版）》郇中丹，刘永平，王昆扬
+《微积分学讲义（第二版）》邝荣雨
+
+武汉大学
+《高等数学 上、下册》（高等教育出版社，齐民友主编）
+《重温微积分》齐民友著
+
+吉林大学
+《数学分析》
+
+东北师范大学
+《数学分析讲义》刘玉琏，傅沛仁著
+
+天津大学
+《高等数学 上、下册》蔡高厅 叶宗泽
+《高等数学试题精选与解答》（蔡高厅等编）
+
+内蒙古大学
+《微积分学简明教程》曹之江等著
+
+## 2.国内数学分析主要参考书目
+
+[1].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(上),第四版.北京:高等教育出版社,2003.
+[2].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(下),第四版.北京:高等教育出版社,2003.
+[3].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(上),第二版,北京:高等教育出版社.2003.
+
+[4].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(下),第二版,北京:高等教育出版社.2003.
+[5].华东师范大学数学系编.数学分析(上),第三版.北京:高等教育出版社,2002.
+[6].华东师范大学数学系编.数学分析(下),第三版.北京:高等教育出版社,2002.
+
+[7].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(上).北京:高等教育出版社.2004.
+[8].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(下).北京:高等教育出版社.2004.
+[9].吴良森,毛羽辉编著.数学分析习题精解(单变量部分).北京:科学出版社.2002.
+
+[10].吴良森,毛羽辉编著.数学分析习题精解(多变量部分).北京:科学出版社.2003.
+[11].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(上).北京:北京师范大学出版社,1985.
+[12].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(下).北京:北京师范大学出版社,1987.
+
+[13].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(上).北京:高等教育出版社,2004.
+[14].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(下).北京:高等教育出版社,2004.
+[15].徐利治,王兴华.数学分析的方法与例题选讲.北京:高等教育出版社,2002.
+
+[16].钱吉林等主编.数学分析解题精粹.武汉:崇文书局,2003.
+[17].裴礼文.数学分析中的典型问题与方法,第二版.北京: 高等教育出版社,2006.
+[18].周民强编著.数学分析习题演练(第一册).北京:科学出版社,2006.
+
+[19].周民强编著.数学分析习题演练(第二册).北京:科学出版社,2006.
+[20].裘兆泰.王承国,章仰文编.数学分析学习指导.北京:科学出版社,2004.
+[21].孙涛编.数学分析经典习题解析.北京:高等教育出版社,2004.
+
+[22].胡晓敏,李承家编著.数学分析考研教案,第二版.西安:西北工业大学出版社, 2006.
+[23].孙本旺,汪浩主编.数学分析中的典型例题和方法.长沙:湖南科学技术出版社,1983.
+[24].毛羽辉编著.数学分析选论.北京:科学出版社,2003.
+
+[25].王昆扬编.数学分析专题研究.北京:高等教育出版社,2001.
+[26].胡适耕,姚云飞编著.数学分析:定理 问题 方法.北京:科学出版社,2007.
+[27].徐利治编著.数学分析的方法及例题选讲:分析学的思想、方法与技巧.大连:大连理工大学出版社,2007.
+
+[28].沈燮昌.数学分析纵横谈.北京:北京大学出版社,1991.
+[29].G.波利亚.数学分析中的问题和定理(第一卷).上海:上海科技出版社,1981.
+[30].舒斯会编著.数学分析选讲.北京:北京大学出版社,2007.
+
+[31].刘三阳,于力,李广民编.数学分析选讲.北京:科学出版社,2007.
+[32].李克典,马云苓编著.数学分析选讲.厦门:厦门大学出版社,2007.
+[33].辛钦著.数学分析八讲.武汉:武汉大学出版社,1999.
+
+[34].[美]克莱鲍尔著.数学分析.上海:上海科技出版社,1981.
+[35].朱时编著.数学分析札记.贵阳:贵州教育出版社,1994.
+[36].[苏]B.Π.吉米多维奇.数学分析习题集.北京:高等教育出版社,1985.
+
+[37].林源渠.数学分析习题集.北京:高等教育出版社,1986.
+[38].吕通庆编.数学分析中一些重要概念及其矛盾概念.北京:人民教育出版社,1979.
+[39].赵显曾著.数学分析拾遗.南京:东南大学出版社,2006.
+
+[40].强文久,李元章,黄雯荣.数学分析的基本概念与方法.北京:高等教育出版社,1989.
+[41].方企勤,林源渠编著.数学分析习题课教材.北京:北京大学出版社,1990.
+[42].王向东主编.数学分析的概念与方法(上).上海:上海科学技术文献出版社,1989.
+[43].王向东主编.数学分析的概念与方法(下).上海:上海科学技术文献出版社,1989.
+[44].朱匀华,周健伟.数学分析选讲.广州:广东科技出版社,1995.
+[45].明清河.数学分析的思想与方法.济南:山东大学出版社,2004.
+[46].李惜雯.数学分析例题解析及难点注释(上).西安:西安交通大学出版社,2004.
+[47].李惜雯.数学分析例题解析及难点注释(下).西安:西安交通大学出版社,2004.
+[48].宋国柱编.分析中的基本定理和典型方法.北京:科学出版社,2004.
+[49].周忠群主编.数学分析方法选讲.重庆:西南师范大学出版社,1990.
+[50].王戈平编.数学分析选讲.徐州:中国矿业大学出版社,2002.
+[51].林安浩,张国杰,王智青编演.数学分析(1983-1984全国高等院校硕士研究生入学试题解答).天津:天津科学技术出版社,1985.
+[52].皱节铣,陈强编.数学试题选解(1980-1985全国招考研究生).长沙:湖南科学技术出版社,1986.
+[53].庄亚栋,方洪锦,姚林编.基础数学试题选解(研究生入选考试).苏州:江苏科技术学出版社,1986.
+[54].蔡林,张继昌编著.研究生数学入学考试精编,第三版.杭州:浙江大学出版社,1999.
+[55].牟俊霖,李青吉主编.洞穿考研数学.北京:航空工业出版社,2003.
+[56].刘光祖,卢恩双主编.大学数学辅导与考研指导.北京:科学出版社,2002.
+[57].西安交通大学十教授考研班主编.考研数学成功指南,第三版.西安:世界图书出版公司西安公司,2004.
+[58].余长安主编.大学数学考研题型精讲与解题技巧集粹.北京:科学出版社,2005.
+[59].邵剑,陈维新,张继昌,何勇编著.大学数学考研专题复习.北京:科学出版社,2001.
+[60].李沛恒主编.考研数学新编考试参考书.北京:中国人民大学出版社,2004.
+[61].龚冬宝（保）主编.数学考研教程,第三版.西安:西北交通大学出版社,2004.
+[62].龚怀云,胡清徽,杨泽高,张可村.研究生高等数学入学考试指南.西安:西北交通大学出版社,1985.
+[63].陈文灯,莫先开主编.数学复习指南.北京:世界图书出版公司北京公司,2002.
+[64].齐民友主编.微积分学习指导.武汉:武汉大学出版社,2004.
+[65].汪林.数学分析中的问题和反例.昆明:云南科技出版社,1990.
+[66].汪林,戴正徳,杨富春,郑喜印.数学分析问题与研究评注.北京:科学出版社,1995.
+[67].陈纪修,於崇华,金路.数学分析(上).北京:高等教育出版社,2000.
+[68].陈纪修,於崇华,金路.数学分析(下).北京:高等教育出版社,2000
+[69].王晓敏,李晓奇,惠兴杰主编.数学分析学习方法与解题指导.沈阳:东北大学出版社,2005.
+[70].赵焕光,林长盛编著.数学分析(上).成都:四川大学出版社,2006.
+[71].赵焕光,林长盛编著.数学分析(下).成都:四川大学出版社,2006.
+[72].陈传章,金福临,朱学炎,欧阳光中.数学分析(上),第二版.北京:高等教育出版社,1983.
+[73].陈传章,金福临,朱学炎,欧阳光中.数学分析(下),第二版.北京:高等教育出版社,1983.
+[74].方企勤编.数学分析(1).北京:高等教育出版社,1986.
+[75].沈燮昌编.数学分析(2).北京:高等教育出版社,1986.
+[76].廖可人,李正元编.数学分析(3).北京:高等教育出版社,1986.
+[77].许绍溥,姜东平,宋国柱,任福贤.数学分析教程(上).南京:南京大学出版社,1990.
+[78].宋国柱,任福贤,许绍溥,姜东平.数学分析教程(下).南京:南京大学出版社,1990.
+[79].武汉大学数学系编.数学分析(上).北京:人民教育出版社,1978.
+[80].武汉大学数学系编.数学分析(下).北京:人民教育出版社,1978.
+[81].吉林大学数学系编.数学分析(上).北京:高等教育出版社,1979.
+[82].吉林大学数学系编.数学分析(中).北京:高等教育出版社,1979.
+[83].吉林大学数学系编.数学分析(下).北京:高等教育出版社,1979.
+[84].常庚哲,史济怀编.数学分析教程(上).北京:高等教育出版社,2003.
+[85].常庚哲,史济怀编.数学分析教程(下).北京:高等教育出版社,2003.
+[86].复旦大学数学系编.数学分析(上).上海:上海科学技术出版社,1978.
+[87].复旦大学数学系编.数学分析(下).上海:上海科学技术出版社,1978.
+[88].邓东皋,尹小玲编著.数学分析简明教程(上).北京:高等教育出版社,1999.
+[89].邓东皋,尹小玲编著.数学分析简明教程(下).北京:高等教育出版社,1999.
+[90].欧阳光中编.数学分析(上).上海:上海科学技术出版社,1982.
+[91].欧阳光中编.数学分析(下).上海:上海科学技术出版社,1982.
+[92].周性伟.数学分析(上).天津:南开大学出版社,1982.
+[93].周性伟.数学分析(下).天津:南开大学出版社,1982.
+[94].彭立中,谭小江编著.数学分析(第1册).北京:高等教育出版社,2005.
+[95].严子谦,尹景学,张然编著.数学分析(第一册).北京:高等教育出版社,2004.
+[96].马富明,高文杰编著.数学分析(第二册).北京:高等教育出版社,2005.
+[97].徐森林,薛春华编著.数学分析(第二册).北京:清华大学出版社,2006.
+[98].王慕三,庄亚栋.数学分析(上).北京:高等教育出版社,1990.
+[99].王慕三,庄亚栋.数学分析(中).北京:高等教育出版社,1990.
+[100].王慕三,庄亚栋.数学分析(下).北京:高等教育出版社,1990.
+[101].邓东皋,尹小玲编撰.数学分析简明教程.北京:高等教育出版社,1997.
+[102].李成章,黄玉明编.数学分析(上).北京:科学出版社,2004.
+[103].李成章,黄玉明编.数学分析(下).北京:科学出版社,2004.
+[104].张筑生.数学分析新讲(第一册).北京:北京大学出版社,1999.
+[105].张筑生.数学分析新讲(第二册).北京:北京大学出版社,1999.
+[106].张筑生.数学分析新讲(第三册).北京:北京大学出版社,1999.
+[107].朱永庚.数学分析(上).西安:陕西师范大学出版社,1989.
+[108].朱永庚.数学分析(下).西安:陕西师范大学出版社,1989.
+[109].东北师大等校数学系编.数学分析(上).北京:高等教育出版社,1983.
+[110].东北师大等校数学系编.数学分析(下).北京:高等教育出版社,1983.
+[111].吴传生,张小柔主编.数学分析(下册)习题精解.合肥:中国科学技术大学出版社,2007.
+[112].吴传生,张小柔主编.数学分析(下册)习题精解).合肥:中国科学技术大学出版社,2007.
+[113].郑英元.数学分析习题课教程(上).北京:高等教育出版社,1991.
+[114].郑英元.数学分析习题课教程(下).北京:高等教育出版社,1991.
+[115].郑美元.数学分析中的习题课教程(上).北京:高等教育出版社,1991.
+[116].郑美元.数学分析中的习题课教程(下).北京:高等教育出版社,1991.
+[117].邵漪漪.高等数学选择题集.上海:上海科学技术出版社,1989.
+[118].孟繁铎.微积分标准化试题库.大连:大连理工大学出版社,1989.
+[119].李承家,胡晓敏编.数学分析导教•导学•导考.西安:西北工业大学出版社,2003.
+[120].贺自树等编.数学分析习题课选讲.重庆:重庆大学出版社,2007.
+[121].李忠 方丽萍编.数学分析教程 上,2008.
+[122].李忠 方丽萍编.数学分析教程 下,2008.
+[123].梅加强编.《数学分析》高等教育出版社,2011.07.
+[124].邹应编.数学分析.上册.高等教育出版社.1995.
+[125].邹应编.数学分析.下册.高等教育出版社.1995.
+[126].郭大钧等编著.数学分析（上册）（第2版）,2002. 
+[127].郭大钧等编著.数学分析（下册）（第2版）,2002.
+[128].沐定夷.数学分析（上）,1993.
+[129].沐定夷.数学分析（下）,1993.
+[130].欧阳光中，姚允龙，周渊编著.数学分析（上册）,2003.
+[131].欧阳光中，姚允龙，周渊编著.数学分析（下册）,2003.
+[132].数学分析-卷I-秦曾复、朱学炎-高等教育出版社1991.
+[133].数学分析-卷Ⅱ-秦曾复、朱学炎-高等教育出版社1991.
+[134].数学分析-卷Ⅲ-秦曾复、朱学炎-高等教育出版社1991.
+[135].数学分析1-徐森林,.薛春华.清华大学出版社,2005.
+[136].数学分析2-徐森林,薛春华.清华大学出版社,2007.
+[137].数学分析3-徐森林,金亚东,薛春华.清华大学出版社,2007.
+[138].数学分析精选习题全解(上)-薛春华,徐森林,2009.
+[139].数学分析精选习题全解(下)-薛春华,徐森林,2010.
+[140].伍胜健.数学分析 第二版，(第一册),北京大学数学教学系列丛书,2009.
+[141].伍胜健.数学分析 第二版，(第二册),北京大学数学教学系列丛书,2009.
+[142].伍胜健.数学分析 第二版，(第三册),北京大学数学教学系列丛书,2009.[143]. 齐民友，黄象鼎，姜明启.微积分（上/下册）.2002.
+[144]. 齐民友.高等数学 上下.2009.
+[145]. 齐民友,杨丽华,孟新焕.微积分学习指导(第二版）.2008.[146].中科大高等数学教研室.高等数学导论 上、中、下.[147]. 朱健民,李建平.高等数学.高等教育出版社. [148]. 朱来义.微积分第三版.[149]. 朱来义.微积分中的典型例题分析与习题.
+
+## 大一上学期
+
+**数学分析(A1)**
+
+**代数学基础**
+
+**解析几何**
+
+**计算机程序设计A**
+
+## 大一下学期
+
+**数学分析(A2)**
+
+**线性代数(A1)**
+
+**力学与热学**
+
+**大雾基础实验**
+
+**数据结构与数据库**
+
+## 大二上学期
+
+**数学分析(A3)**
+
+**线性代数(A2)**
+
+**微分方程I**
+
+**电磁学B**
+
+**大雾综合实验**
+
+## 大二下学期
+
+**近世代数**
+
+**复分析**
+
+**实分析**
+
+**光学与原子物理**
+
+## 大三上学期
+
+(1)通修课程
+
+**微分几何**
+
+**概率论**
+
+(2)差异课程
+
+①基础数学
+
+**泛函分析**
+
+组合学
+
+高等实分析
+
+②应用数学
+
+**运筹学**
+
+**数理统计**
+
+**组合学**
+
+数学实验
+
+符号计算软件
+
+③概率统计
+
+**数理统计**
+
+泛函分析
+
+组合学
+
+## 大三下学期
+
+(1)基础数学
+
+**拓扑学**
+
+**微分方程II**
+
+应用随机过程
+
+(2)应用数学
+
+**数学建模**
+
+应用随机过程
+
+算法基础
+
+小波分析
+
+(3)概率统计
+
+**应用随机过程**
+
+**回归分析**
+
+微分方程II
+
+多元统计分析A
+
+时间序列分析A
+
+## 大四上学期
+
+(1)基础数学
+
+微分流形
+
+代数拓扑
+
+(2)应用数学
+
+图论
+
+(3)概率统计
+
+高等概率论
+
+## 大四下学期
+
+**毕业论文**
+
+(1)基础数学
+
+代数学
+
+(2)应用数学
+
+(3)概率统计
+
+随机过程
+
+
+
+
+
+
+
+我们都知道数学系本科生刚进入大一首先要上3个学期的《数学分析》，2个学期《高等代数与解析几何》，这都是学科基础必修课，其次还有1个学期的《常微分方程》《复分析》《实变函数》《抽象代数》《概率论》和《测度与积分》。
+
+ 
+
+如果分核心课程，从选修基础数学、应用数学、概率与统计、计算数学、运筹学五个方向看，每个方向所选必修课程是不一样，但必须满足15-20学分左右，也就大概有4-6门课程的开设，就以基础数学为例子，他们要学的必修课程会有《泛函分析》《偏微分方程》《拓扑学》与《微分几何》等，应用数学与基础数学方向不同是这专业的同学会学《数值分析》与《应用分析》。
+
+ 
+
+而我要强调一点计算数学与前两个方向不同于的一点是这类学生是要上《偏微分方程数值求解》，看一个学校的计算数学是真的计算数学还是所谓的信息与计算，只要看一下上不上微分方程数值解就行了；运筹学是要必修线性规划和离散数学，而概率与统计方向的同学是包括了《统计推断》《线性回归》《应用随机过程》和《数值分析》。
+
+ 
+
+从数学分析讲起，这是数学系课程的开端，也是数学系大部分课程的基础，作为大一初学者是比较难的一门课，这种难是指对数学分析思想与方法不适应，其实基础打扎实，当你大三考研复习会很轻松，就单这门课程会讲到大概三个学期，与高等数学不同，是它的证明思想与计算方法侧重点不同，下面我例举在学习数学分析要参考的书籍开始：
+
+## 一.数学分析
+
+国内教材
+
+1. 《数学分析》华东师范大学数学系著：师范类用书
+2. 《数学分析》陈纪修等著
+3. 《数学分析新讲》张筑生：一本新观点的书，课后没有习题
+4. 《数学分析》徐森林著
+5. 《数学分析教程》常庚哲，史济怀著：课后习题极难
+6. 《数学分析》曹之江等著： 内蒙古大学数理基地教材，偏重于物理
+7. 《数学分析简明教程》邓东翱著：国家精品课程的课本
+8.  华罗庚《高等数学引论》科学出版社
+
+ 
+
+国外教材
+
+1. 《微积分学教程》菲赫金格尔茨著
+
+2. 《数学分析》卓立奇
+
+3. 《数学分析简明教程》辛钦
+
+4. 《数学分析讲义》阿黑波夫等著
+
+5. 《数学分析八讲》辛钦
+
+6. 《数学分析原理》rudin：简单明了，值得推荐
+
+7. 《数学分析原理》菲赫金格尔茨著
+
+     
+
+习题集
+
+1. 《吉米多维奇数学分析习题集》
+2. 《数学分析习题集》林源渠，方企勤等
+3. 《数学分析习题精解》裴礼文、钱吉林
+4. 《数学分析习题讲义/演练》谢惠民 /周民强  
+
+### 二.高等代数与解析几何
+
+1. 《解析几何》丘维声，北京大学出版社
+2. 《解析几何》尤承业
+3. 《解析几何习题集》巴赫瓦洛夫
+4. 《高等代数》北京大学数学系代数与几何教研室代数小组
+5. 《高等代数》张禾瑞，郝鈵新
+6. 《线性代数》李烔生，中国科学技术大学出版社
+7. 《高等代数学》张贤科，清华大学出版社
+8. 《线性代数与矩阵论》许以超，高等教育出版社
+9. 《代数学引论》柯斯特利金
+10. 《线性代数习题集》普罗斯库列柯夫
+11. 《高等代数》丘维声著
+12. 《高等代数习题集》杨子胥著：用来做考研的参考书
+13. 《线性代数》蒋尔雄，高锟敏，吴景琨著：老的计算数学教材
+14. 《线性空间引论》叶明训，武汉大学出版社
+
+### 三.抽象代数
+
+1. 《近世代数引论》冯克勤 
+2. 《代数学引论》聂灵沼
+3. 《近世代数》盛德成
+4. 《近世代数》熊全淹
+5. 《代数学》莫宗坚 
+
+### 四.常微分方程
+
+1. 《常微分方程教程》丁同仁、李承治：国内最好的教材
+2. 《常微分方程》王高雄等
+3. 《常微分方程》庞特里亚金
+4. 《常微分方程》V.I.Arnold
+5. 《常微分方程习题集》菲利波夫
+
+### 五.复变函数
+
+1. 《简明复分析》龚昇
+2. 《复变函数》钟玉泉
+3. 《复变函数论习题集》沃尔科维斯
+4. 《解析函数论初步》H.嘉当
+5. 《Complex Analysis 》L.V.Ahlfors
+6. 《复变函数》余家荣
+
+### 六.实变函数
+
+1. 《实变函数论》周民强
+2. 《实变函数与泛函分析》夏道行，伍卓人，严绍宗，舒五昌
+3. 《实变函数》江泽坚，吴志泉
+4. 《实变函数与泛函分析概要》郑维行
+5. 《实变函数论习题集》捷利亚科夫斯基
+6. 《实变函数论的定理与习题》鄂强
+
+### 七.偏微分方程
+
+1. 《数学物理方程》谷超豪，李大潜等
+2. 《数学物理方程习题集》弗拉基米洛夫
+3. 《特殊函数概论》王竹溪
+4. 《偏微分方程》陈祖墀 
+5. 《广义函数与数学物理方程》齐民友
+6. 《数学物理方程讲义》姜礼尚
+7. 《数学物理方程》柯朗
+
+### 八.泛函分析
+
+1. 《实变函数与泛函分析》夏道行
+2. 《函数论与泛函分析初步》柯尔莫哥洛夫
+3. 《泛函分析理论习题解答》克里洛夫
+4. 《泛函分析讲义》张恭庆
+5. 《泛函分析习题集》安托涅维奇 
+
+### 九.概率论
+
+1. 《概率论基础》李贤平
+2. 《概率论引论》汪仁官
+3. 《概率论与数理统计》(上、下)，中山大学数学力学系编
+
+### 十.数值分析
+
+1. 《矩阵数值分析》邢志栋
+2. 《最优化理论与算法》陈宝林
+3. 《数值分析》李庆扬，王能超，易大义
+4. 《数值逼近》蒋尔雄，赵风光
+5. 《微分方程数值解法》李立康，於崇华，朱政华
+6. 《数值优化》袁亚湘，孙文瑜
+7. 《数值分析方法》奚梅成
+8. 《非线性方程组解法与最优化方法》王德人
+9. 《矩阵计算和方程求根》曹志浩，张德玉，李瑞遐
+10. 《数值逼近》李岳生，黄友谦
+11. 《微分方程数值解法》余德浩，汤华中
+
+### 十一.拓扑学
+
+1. 《点集拓扑讲义（第二版）》熊金城 
+2. 《基础拓扑学》M.A.Armstrong 
+3. 《点集拓扑学》《点集拓扑学题解与反例》陈肇姜
+4. 《几何学与拓扑学习题集》巴兹列夫
+
+### 十二.微分几何
+
+1. 《微分几何》陈省身 
+2. 《微分几何》陈维垣 
+3. 《微分几何理论与习题》里普希茨
+4. 《微分几何习题集》菲金科
+5. 《微分几何》彭家贵
+
+### 十三.随机过程与数理统计
+
+1. 《数理统计学教程》陈希孺
+2. 《数理统计习题集》中国科学技术大学统计与金融系
+3. 《随机过程及应用》陆大金
+4. 《随机过程论》钱敏平，龚鲁光
+5. 《随机过程》孙洪祥
+
+
+
+花了半天时间，对国内部分大学所编数学分析(/高等数学/微积分)教材做了个汇总，发于此，肯定有很多遗漏，(期待有兴趣的虫友帮我一起补充,**补充格式:大学名，精确书名，编写作者...**.)。
+**国内部份大学常用数学分析(高数,微积分)教材总汇**
+
+**清华大学**
+《数学分析教程》常庚哲.史济怀.
+《数学分析》(三册).何琛 史济怀 徐森林
+《数学分析》(三册).徐森林,.金亚东,.薛春华
+《数学分析讲义》(三册).陈天权
+《数学分析习题课讲义》谢惠民等
+**北京大学**
+《数学分析》沈燮昌著第一册，方企勤著第二册，廖可人、李正元著第三册
+《数学分析习题课教材》（第一版）
+《数学分析解题指南》（第二版）林源渠，方企勤
+《数学分析习题集》林源渠，方企勤等
+《数学分析新讲》张筑生(三册)
+《数学分析简明教程》邓东翱,尹小铃著
+《数学分析上、下册》彭立中、谭小江著
+**复旦大学**
+《数学分析》
+《数学分析》陈传璋，金福临，朱学炎，欧阳光中著第二版
+《数学分析》欧阳光中，朱学炎，金福临，陈传璋著第三版
+《数学分析》陈纪修等著
+《数学分析》欧阳光中，姚允龙著
+**同济大学**
+《高等数学》（同济大学数学系第六版,上、下册）
+《高等数学讲义》樊映川等编..
+**华东师范大学**
+《数学分析》华东师范大学数学系著
+《数学分析精读讲义》华东师范大学数学系著
+《数学分析习题精解》吴良森，毛羽辉等?
+**中国科学技术大学**
+《数学分析教程》常庚哲，史济怀著
+《简明微积分》龚昇
+《高等数学引论》华罗庚
+《数学分析》徐森林著
+《数学分析的方法及例题选讲》徐利治
+**南开大学**
+《数学分析上、下册》李成章，黄玉民
+《在南开大学的演讲》陈省身
+**南京大学**
+《数学分析讲义》梅加强
+《数学分析教程》许绍浦等
+**北京师范大学**
+《简明数学分析（第一版）》王昆扬
+《简明数学分析（第二版）》郇中丹，刘永平，王昆扬
+《微积分学讲义（第二版）》邝荣雨
+**武汉大学**
+《高等数学 上、下册》（高等教育出版社，齐民友主编）
+《重温微积分》齐民友著
+**吉林大学**
+《数学分析》
+**东北师范大学**
+《数学分析讲义》刘玉琏，傅沛仁著
+**天津大学**
+《高等数学 上、下册》蔡高厅 叶宗泽
+《高等数学试题精选与解答》（蔡高厅等编）
+**内蒙古大学**
+《微积分学简明教程》曹之江等著
+
+[ Last edited by hylpy on 2014-9-15 at 12:38 ]
+
+国内数学分析主 要 参 考 书 目 
+
+[1].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(上),第四版.北京:高等教育出版社,2003.
+[2].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(下),第四版.北京:高等教育出版社,2003.
+[3].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(上),第二版,北京:高等教育出版社.2003. 
+[4].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(下),第二版,北京:高等教育出版社.2003.
+[5].华东师范大学数学系编.数学分析(上),第三版.北京:高等教育出版社,2002.
+[6].华东师范大学数学系编.数学分析(下),第三版.北京:高等教育出版社,2002.
+[7].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(上).北京:高等教育出版社.2004. 
+[8].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(下).北京:高等教育出版社.2004. 
+[9].吴良森,毛羽辉编著.数学分析习题精解(单变量部分).北京:科学出版社.2002. 
+[10].吴良森,毛羽辉编著.数学分析习题精解(多变量部分).北京:科学出版社.2003.
+[11].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(上).北京:北京师范大学出版社,1985.
+[12].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(下).北京:北京师范大学出版社,1987.
+[13].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(上).北京:高等教育出版社,2004.
+[14].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(下).北京:高等教育出版社,2004.
+[15].徐利治,王兴华.数学分析的方法与例题选讲.北京:高等教育出版社,2002.
+[16].钱吉林等主编.数学分析解题精粹.武汉:崇文书局,2003.
+[17].裴礼文.数学分析中的典型问题与方法,第二版.北京: 高等教育出版社,2006.
+[18].周民强编著.数学分析习题演练(第一册).北京:科学出版社,2006.
+[19].周民强编著.数学分析习题演练(第二册).北京:科学出版社,2006.
+[20].裘兆泰.王承国,章仰文编.数学分析学习指导.北京:科学出版社,2004.
+[21].孙涛编.数学分析经典习题解析.北京:高等教育出版社,2004.
+[22].胡晓敏,李承家编著.数学分析考研教案,第二版.西安:西北工业大学出版社, 2006. 
+[23].孙本旺,汪浩主编.数学分析中的典型例题和方法.长沙:湖南科学技术出版社,1983. 
+[24].毛羽辉编著.数学分析选论.北京:科学出版社,2003.
+[25].王昆扬编.数学分析专题研究.北京:高等教育出版社,2001.
+[26].胡适耕,姚云飞编著.数学分析:定理 问题 方法.北京:科学出版社,2007.
+[27].徐利治编著.数学分析的方法及例题选讲:分析学的思想、方法与技巧.大连:大连理工大学出版社,2007.
+[28].沈燮昌.数学分析纵横谈.北京:北京大学出版社,1991.
+[29].G.波利亚.数学分析中的问题和定理(第一卷).上海:上海科技出版社,1981.
+[30].舒斯会编著.数学分析选讲.北京:北京大学出版社,2007.
+[31].刘三阳,于力,李广民编.数学分析选讲.北京:科学出版社,2007.
+[32].李克典,马云苓编著.数学分析选讲.厦门:厦门大学出版社,2007.
+[33].辛钦著.数学分析八讲.武汉:武汉大学出版社,1999.
+[34].[美]克莱鲍尔著.数学分析.上海:上海科技出版社,1981. 
+[35].朱时编著.数学分析札记.贵阳:贵州教育出版社,1994.
+[36].[苏]B.Π.吉米多维奇.数学分析习题集.北京:高等教育出版社,1985.
+[37].林源渠.数学分析习题集.北京:高等教育出版社,1986.
+[38].吕通庆编.数学分析中一些重要概念及其矛盾概念.北京:人民教育出版社,1979.
+[39].赵显曾著.数学分析拾遗.南京:东南大学出版社,2006.
+[40].强文久,李元章,黄雯荣.数学分析的基本概念与方法.北京:高等教育出版社,1989.
+[41].方企勤,林源渠编著.数学分析习题课教材.北京:北京大学出版社,1990.
+[42].王向东主编.数学分析的概念与方法(上).上海:上海科学技术文献出版社,1989.
+[43].王向东主编.数学分析的概念与方法(下).上海:上海科学技术文献出版社,1989.
+[44].朱匀华,周健伟.数学分析选讲.广州:广东科技出版社,1995.
+[45].明清河.数学分析的思想与方法.济南:山东大学出版社,2004.
+[46].李惜雯.数学分析例题解析及难点注释(上).西安:西安交通大学出版社,2004.
+[47].李惜雯.数学分析例题解析及难点注释(下).西安:西安交通大学出版社,2004.
+[48].宋国柱编.分析中的基本定理和典型方法.北京:科学出版社,2004.
+[49].周忠群主编.数学分析方法选讲.重庆:西南师范大学出版社,1990.
+[50].王戈平编.数学分析选讲.徐州:中国矿业大学出版社,2002.
+[51].林安浩,张国杰,王智青编演.数学分析(1983-1984全国高等院校硕士研究生入学试题解答).天津:天津科学技术出版社,1985.
+[52].皱节铣,陈强编.数学试题选解(1980-1985全国招考研究生).长沙:湖南科学技术出版社,1986.
+[53].庄亚栋,方洪锦,姚林编.基础数学试题选解(研究生入选考试).苏州:江苏科技术学出版社,1986.
+[54].蔡林,张继昌编著.研究生数学入学考试精编,第三版.杭州:浙江大学出版社,1999.
+[55].牟俊霖,李青吉主编.洞穿考研数学.北京:航空工业出版社,2003.
+[56].刘光祖,卢恩双主编.大学数学辅导与考研指导.北京:科学出版社,2002.
+[57].西安交通大学十教授考研班主编.考研数学成功指南,第三版.西安:世界图书出版公司西安公司,2004.
+[58].余长安主编.大学数学考研题型精讲与解题技巧集粹.北京:科学出版社,2005.
+[59].邵剑,陈维新,张继昌,何勇编著.大学数学考研专题复习.北京:科学出版社,2001.
+[60].李沛恒主编.考研数学新编考试参考书.北京:中国人民大学出版社,2004.
+[61].龚冬宝（保）主编.数学考研教程,第三版.西安:西北交通大学出版社,2004. 
+[62].龚怀云,胡清徽,杨泽高,张可村.研究生高等数学入学考试指南.西安:西北交通大学出版社,1985. 
+[63].陈文灯,莫先开主编.数学复习指南.北京:世界图书出版公司北京公司,2002.
+[64].齐民友主编.微积分学习指导.武汉:武汉大学出版社,2004. 
+[65].汪林.数学分析中的问题和反例.昆明:云南科技出版社,1990.
+[66].汪林,戴正徳,杨富春,郑喜印.数学分析问题与研究评注.北京:科学出版社,1995.
+[67].陈纪修,於崇华,金路.数学分析(上).北京:高等教育出版社,2000.
+[68].陈纪修,於崇华,金路.数学分析(下).北京:高等教育出版社,2000
+[69].王晓敏,李晓奇,惠兴杰主编.数学分析学习方法与解题指导.沈阳:东北大学出版社,2005. 
+[70].赵焕光,林长盛编著.数学分析(上).成都:四川大学出版社,2006. 
+[71].赵焕光,林长盛编著.数学分析(下).成都:四川大学出版社,2006. 
+[72].陈传章,金福临,朱学炎,欧阳光中.数学分析(上),第二版.北京:高等教育出版社,1983.
+[73].陈传章,金福临,朱学炎,欧阳光中.数学分析(下),第二版.北京:高等教育出版社,1983.
+[74].方企勤编.数学分析(1).北京:高等教育出版社,1986.
+[75].沈燮昌编.数学分析(2).北京:高等教育出版社,1986.
+[76].廖可人,李正元编.数学分析(3).北京:高等教育出版社,1986.
+[77].许绍溥,姜东平,宋国柱,任福贤.数学分析教程(上).南京:南京大学出版社,1990. 
+[78].宋国柱,任福贤,许绍溥,姜东平.数学分析教程(下).南京:南京大学出版社,1990. 
+[79].武汉大学数学系编.数学分析(上).北京:人民教育出版社,1978.
+[80].武汉大学数学系编.数学分析(下).北京:人民教育出版社,1978.
+[81].吉林大学数学系编.数学分析(上).北京:高等教育出版社,1979.
+[82].吉林大学数学系编.数学分析(中).北京:高等教育出版社,1979.
+[83].吉林大学数学系编.数学分析(下).北京:高等教育出版社,1979.
+[84].常庚哲,史济怀编.数学分析教程(上).北京:高等教育出版社,2003.
+[85].常庚哲,史济怀编.数学分析教程(下).北京:高等教育出版社,2003.
+[86].复旦大学数学系编.数学分析(上).上海:上海科学技术出版社,1978.
+[87].复旦大学数学系编.数学分析(下).上海:上海科学技术出版社,1978.
+[88].邓东皋,尹小玲编著.数学分析简明教程(上).北京:高等教育出版社,1999.
+[89].邓东皋,尹小玲编著.数学分析简明教程(下).北京:高等教育出版社,1999.
+[90].欧阳光中编.数学分析(上).上海:上海科学技术出版社,1982.
+[91].欧阳光中编.数学分析(下).上海:上海科学技术出版社,1982.
+[92].周性伟.数学分析(上).天津:南开大学出版社,1982.
+[93].周性伟.数学分析(下).天津:南开大学出版社,1982.
+[94].彭立中,谭小江编著.数学分析(第1册).北京:高等教育出版社,2005. 
+[95].严子谦,尹景学,张然编著.数学分析(第一册).北京:高等教育出版社,2004. 
+[96].马富明,高文杰编著.数学分析(第二册).北京:高等教育出版社,2005. 
+[97].徐森林,薛春华编著.数学分析(第二册).北京:清华大学出版社,2006. 
+[98].王慕三,庄亚栋.数学分析(上).北京:高等教育出版社,1990.
+[99].王慕三,庄亚栋.数学分析(中).北京:高等教育出版社,1990.
+[100].王慕三,庄亚栋.数学分析(下).北京:高等教育出版社,1990.
+[101].邓东皋,尹小玲编撰.数学分析简明教程.北京:高等教育出版社,1997.
+[102].李成章,黄玉明编.数学分析(上).北京:科学出版社,2004.
+[103].李成章,黄玉明编.数学分析(下).北京:科学出版社,2004.
+[104].张筑生.数学分析新讲(第一册).北京:北京大学出版社,1999.
+[105].张筑生.数学分析新讲(第二册).北京:北京大学出版社,1999.
+[106].张筑生.数学分析新讲(第三册).北京:北京大学出版社,1999.
+[107].朱永庚.数学分析(上).西安:陕西师范大学出版社,1989.
+[108].朱永庚.数学分析(下).西安:陕西师范大学出版社,1989.
+[109].东北师大等校数学系编.数学分析(上).北京:高等教育出版社,1983.
+[110].东北师大等校数学系编.数学分析(下).北京:高等教育出版社,1983.
+[111].吴传生,张小柔主编.数学分析(下册)习题精解.合肥:中国科学技术大学出版社,2007.
+[112].吴传生,张小柔主编.数学分析(下册)习题精解).合肥:中国科学技术大学出版社,2007.
+[113].郑英元.数学分析习题课教程(上).北京:高等教育出版社,1991.
+[114].郑英元.数学分析习题课教程(下).北京:高等教育出版社,1991.
+[115].郑美元.数学分析中的习题课教程(上).北京:高等教育出版社,1991.
+[116].郑美元.数学分析中的习题课教程(下).北京:高等教育出版社,1991.
+[117].邵漪漪.高等数学选择题集.上海:上海科学技术出版社,1989.
+[118].孟繁铎.微积分标准化试题库.大连:大连理工大学出版社,1989. 
+[119].李承家,胡晓敏编.数学分析导教•导学•导考.西安:西北工业大学出版社,2003. 
+[120].贺自树等编.数学分析习题课选讲.重庆:重庆大学出版社,2007.
+
+[ Last edited by hylpy on 2018-9-2 at 18:39 ]
+
+[121].李忠 方丽萍编.数学分析教程 上,2008.
+[122].李忠 方丽萍编.数学分析教程 下,2008.
+[123].梅加强编.《数学分析》高等教育出版社,2011.07.
+[124].邹应编.数学分析.上册.高等教育出版社.1995.
+[125].邹应编.数学分析.下册.高等教育出版社.1995.
+[126].郭大钧等编著.数学分析（上册）（第2版）,2002. 
+[127].郭大钧等编著.数学分析（下册）（第2版）,2002. 
+[128].沐定夷.数学分析（上）,1993.
+[129].沐定夷.数学分析（下）,1993. 
+[130].欧阳光中，姚允龙，周渊编著.数学分析（上册）,2003.
+[131].欧阳光中，姚允龙，周渊编著.数学分析（下册）,2003.
+[132].数学分析-卷I-秦曾复、朱学炎-高等教育出版社1991.
+[133].数学分析-卷Ⅱ-秦曾复、朱学炎-高等教育出版社1991.
+[134].数学分析-卷Ⅲ-秦曾复、朱学炎-高等教育出版社1991.
+
+[ Last edited by hylpy on 2018-9-5 at 19:19 ]
+
+[135].数学分析1-徐森林,.薛春华.清华大学出版社,2005.
+[136].数学分析2-徐森林,薛春华.清华大学出版社,2007.
+[137].数学分析3-徐森林,金亚东,薛春华.清华大学出版社,2007.
+[138].数学分析精选习题全解(上)-薛春华,徐森林,2009.
+[139].数学分析精选习题全解(下)-薛春华,徐森林,2010.
+
+[ Last edited by hylpy on 2018-9-7 at 18:06 ]
+
+[140].伍胜健.数学分析 第二版，(第一册),北京大学数学教学系列丛书,2009.
+[141].伍胜健.数学分析 第二版，(第二册),北京大学数学教学系列丛书,2009.
+[142].伍胜健.数学分析 第二版，(第三册),北京大学数学教学系列丛书,2009.
+
+ 
+
+ 
+
+国内数学分析主 要 参 考 书 目
+本帖隐藏的内容
+[1].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(上),第四版.北京:高等教育出版社,2003.
+[2].刘玉琏,傅沛仁,林玎,苑德馨,刘宁编.数学分析讲义(下),第四版.北京:高等教育出版社,2003.
+[3].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(上),第二版,北京:高等教育出版社.2003.
+[4].刘玉琏,扬奎元,吕风编.数学分析讲义学习辅导书(下),第二版,北京:高等教育出版社.2003.
+[5].华东师范大学数学系编.数学分析(上),第三版.北京:高等教育出版社,2002.
+[6].华东师范大学数学系编.数学分析(下),第三版.北京:高等教育出版社,2002.
+[7].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(上).北京:高等教育出版社.2004.
+[8].吴良森,毛羽辉,韩士安,吴畏编著.数学分析学习指导书(下).北京:高等教育出版社.2004.
+[9].吴良森,毛羽辉编著.数学分析习题精解(单变量部分).北京:科学出版社.2002.
+[10].吴良森,毛羽辉编著.数学分析习题精解(多变量部分).北京:科学出版社.2003.
+[11].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(上).北京:北京师范大学出版社,1985.
+[12].薛宗慈,曾昭著,邝荣雨,陈平尚编.数学分析习作课讲义(下).北京:北京师范大学出版社,1987.
+[13].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(上).北京:高等教育出版社,2004.
+[14].谢惠民,恽自求,易法槐,钱定边编.数学分析习题课讲义(下).北京:高等教育出版社,2004.
+[15].徐利治,王兴华.数学分析的方法与例题选讲.北京:高等教育出版社,2002.
+[16].钱吉林等主编.数学分析解题精粹.武汉:崇文书局,2003.
+[17].裴礼文.数学分析中的典型问题与方法,第二版.北京: 高等教育出版社,2006.
+[18].周民强编著.数学分析习题演练(第一册).北京:科学出版社,2006.
+[19].周民强编著.数学分析习题演练(第二册).北京:科学出版社,2006.
+[20].裘兆泰.王承国,章仰文编.数学分析学习指导.北京:科学出版社,2004.
+[21].孙涛编.数学分析经典习题解析.北京:高等教育出版社,2004.
+[22].胡晓敏,李承家编著.数学分析考研教案,第二版.西安:西北工业大学出版社, 2006.
+[23].孙本旺,汪浩主编.数学分析中的典型例题和方法.长沙:湖南科学技术出版社,1983.
+[24].毛羽辉编著.数学分析选论.北京:科学出版社,2003.
+[25].王昆扬编.数学分析专题研究.北京:高等教育出版社,2001.
+[26].胡适耕,姚云飞编著.数学分析:定理 问题 方法.北京:科学出版社,2007.
+[27].徐利治编著.数学分析的方法及例题选讲:分析学的思想、方法与技巧.大连:大连理工大学出版社,2007.
+[28].沈燮昌.数学分析纵横谈.北京:北京大学出版社,1991.
+[29].G.波利亚.数学分析中的问题和定理(第一卷).上海:上海科技出版社,1981.
+[30].舒斯会编著.数学分析选讲.北京:北京大学出版社,2007.
+[31].刘三阳,于力,李广民编.数学分析选讲.北京:科学出版社,2007.
+[32].李克典,马云苓编著.数学分析选讲.厦门:厦门大学出版社,2007.
+[33].辛钦著.数学分析八讲.武汉:武汉大学出版社,1999.
+[34].[美]克莱鲍尔著.数学分析.上海:上海科技出版社,1981.
+[35].朱时编著.数学分析札记.贵阳:贵州教育出版社,1994.
+[36].[苏]B.Π.吉米多维奇.数学分析习题集.北京:高等教育出版社,1985.
+[37].林源渠.数学分析习题集.北京:高等教育出版社,1986.
+[38].吕通庆编.数学分析中一些重要概念及其矛盾概念.北京:人民教育出版社,1979.
+[39].赵显曾著.数学分析拾遗.南京:东南大学出版社,2006.
+[40].强文久,李元章,黄雯荣.数学分析的基本概念与方法.北京:高等教育出版社,1989.
+[41].方企勤,林源渠编著.数学分析习题课教材.北京:北京大学出版社,1990.
+[42].王向东主编.数学分析的概念与方法(上).上海:上海科学技术文献出版社,1989.
+[43].王向东主编.数学分析的概念与方法(下).上海:上海科学技术文献出版社,1989.
+[44].朱匀华,周健伟.数学分析选讲.广州:广东科技出版社,1995.
+[45].明清河.数学分析的思想与方法.济南:山东大学出版社,2004.
+[46].李惜雯.数学分析例题解析及难点注释(上).西安:西安交通大学出版社,2004.
+[47].李惜雯.数学分析例题解析及难点注释(下).西安:西安交通大学出版社,2004.
+[48].宋国柱编.分析中的基本定理和典型方法.北京:科学出版社,2004.
+[49].周忠群主编.数学分析方法选讲.重庆:西南师范大学出版社,1990.
+[50].王戈平编.数学分析选讲.徐州:中国矿业大学出版社,2002.
+[51].林安浩,张国杰,王智青编演.数学分析(1983-1984全国高等院校硕士研究生入学试题解答).天津:天津科学技术出版社,1985.
+[52].皱节铣,陈强编.数学试题选解(1980-1985全国招考研究生).长沙:湖南科学技术出版社,1986.
+[53].庄亚栋,方洪锦,姚林编.基础数学试题选解(研究生入选考试).苏州:江苏科技术学出版社,1986.
+[54].蔡林,张继昌编著.研究生数学入学考试精编,第三版.杭州:浙江大学出版社,1999.
+[55].牟俊霖,李青吉主编.洞穿考研数学.北京:航空工业出版社,2003.
+[56].刘光祖,卢恩双主编.大学数学辅导与考研指导.北京:科学出版社,2002.
+[57].西安交通大学十教授考研班主编.考研数学成功指南,第三版.西安:世界图书出版公司西安公司,2004.
+[58].余长安主编.大学数学考研题型精讲与解题技巧集粹.北京:科学出版社,2005.
+[59].邵剑,陈维新,张继昌,何勇编著.大学数学考研专题复习.北京:科学出版社,2001.
+[60].李沛恒主编.考研数学新编考试参考书.北京:中国人民大学出版社,2004.
+[61].龚冬宝（保）主编.数学考研教程,第三版.西安:西北交通大学出版社,2004.
+[62].龚怀云,胡清徽,杨泽高,张可村.研究生高等数学入学考试指南.西安:西北交通大学出版社,1985.
+[63].陈文灯,莫先开主编.数学复习指南.北京:世界图书出版公司北京公司,2002.
+[64].齐民友主编.微积分学习指导.武汉:武汉大学出版社,2004.
+[65].汪林.数学分析中的问题和反例.昆明:云南科技出版社,1990.
+[66].汪林,戴正徳,杨富春,郑喜印.数学分析问题与研究评注.北京:科学出版社,1995.
+[67].陈纪修,於崇华,金路.数学分析(上).北京:高等教育出版社,2000.
+[68].陈纪修,於崇华,金路.数学分析(下).北京:高等教育出版社,2000
+[69].王晓敏,李晓奇,惠兴杰主编.数学分析学习方法与解题指导.沈阳:东北大学出版社,2005.
+[70].赵焕光,林长盛编著.数学分析(上).成都:四川大学出版社,2006.
+[71].赵焕光,林长盛编著.数学分析(下).成都:四川大学出版社,2006.
+[72].陈传章,金福临,朱学炎,欧阳光中.数学分析(上),第二版.北京:高等教育出版社,1983.
+[73].陈传章,金福临,朱学炎,欧阳光中.数学分析(下),第二版.北京:高等教育出版社,1983.
+[74].方企勤编.数学分析(1).北京:高等教育出版社,1986.
+[75].沈燮昌编.数学分析(2).北京:高等教育出版社,1986.
+[76].廖可人,李正元编.数学分析(3).北京:高等教育出版社,1986.
+[77].许绍溥,姜东平,宋国柱,任福贤.数学分析教程(上).南京:南京大学出版社,1990.
+[78].宋国柱,任福贤,许绍溥,姜东平.数学分析教程(下).南京:南京大学出版社,1990.
+[79].武汉大学数学系编.数学分析(上).北京:人民教育出版社,1978.
+[80].武汉大学数学系编.数学分析(下).北京:人民教育出版社,1978.
+[81].吉林大学数学系编.数学分析(上).北京:高等教育出版社,1979.
+[82].吉林大学数学系编.数学分析(中).北京:高等教育出版社,1979.
+[83].吉林大学数学系编.数学分析(下).北京:高等教育出版社,1979.
+[84].常庚哲,史济怀编.数学分析教程(上).北京:高等教育出版社,2003.
+[85].常庚哲,史济怀编.数学分析教程(下).北京:高等教育出版社,2003.
+[86].复旦大学数学系编.数学分析(上).上海:上海科学技术出版社,1978.
+[87].复旦大学数学系编.数学分析(下).上海:上海科学技术出版社,1978.
+[88].邓东皋,尹小玲编著.数学分析简明教程(上).北京:高等教育出版社,1999.
+[89].邓东皋,尹小玲编著.数学分析简明教程(下).北京:高等教育出版社,1999.
+[90].欧阳光中编.数学分析(上).上海:上海科学技术出版社,1982.
+[91].欧阳光中编.数学分析(下).上海:上海科学技术出版社,1982.
+[92].周性伟.数学分析(上).天津:南开大学出版社,1982.
+[93].周性伟.数学分析(下).天津:南开大学出版社,1982.
+[94].彭立中,谭小江编著.数学分析(第1册).北京:高等教育出版社,2005.
+[95].严子谦,尹景学,张然编著.数学分析(第一册).北京:高等教育出版社,2004.
+[96].马富明,高文杰编著.数学分析(第二册).北京:高等教育出版社,2005.
+[97].徐森林,薛春华编著.数学分析(第二册).北京:清华大学出版社,2006.
+[98].王慕三,庄亚栋.数学分析(上).北京:高等教育出版社,1990.
+[99].王慕三,庄亚栋.数学分析(中).北京:高等教育出版社,1990.
+[100].王慕三,庄亚栋.数学分析(下).北京:高等教育出版社,1990.
+[101].邓东皋,尹小玲编撰.数学分析简明教程.北京:高等教育出版社,1997.
+[102].李成章,黄玉明编.数学分析(上).北京:科学出版社,2004.
+[103].李成章,黄玉明编.数学分析(下).北京:科学出版社,2004.
+[104].张筑生.数学分析新讲(第一册).北京:北京大学出版社,1999.
+[105].张筑生.数学分析新讲(第二册).北京:北京大学出版社,1999.
+[106].张筑生.数学分析新讲(第三册).北京:北京大学出版社,1999.
+[107].朱永庚.数学分析(上).西安:陕西师范大学出版社,1989.
+[108].朱永庚.数学分析(下).西安:陕西师范大学出版社,1989.
+[109].东北师大等校数学系编.数学分析(上).北京:高等教育出版社,1983.
+[110].东北师大等校数学系编.数学分析(下).北京:高等教育出版社,1983.
+[111].吴传生,张小柔主编.数学分析(上册)习题精解.合肥:中国科学技术大学出版社,2007.
+[112].吴传生,张小柔主编.数学分析(下册)习题精解).合肥:中国科学技术大学出版社,2007.
+[113].郑英元.数学分析习题课教程(上).北京:高等教育出版社,1991.
+[114].郑英元.数学分析习题课教程(下).北京:高等教育出版社,1991.
+[115].郑美元.数学分析中的习题课教程(上).北京:高等教育出版社,1991.
+[116].郑美元.数学分析中的习题课教程(下).北京:高等教育出版社,1991.
+[117].邵漪漪.高等数学选择题集.上海:上海科学技术出版社,1989.
+[118].孟繁铎.微积分标准化试题库.大连:大连理工大学出版社,1989.
+[119].李承家,胡晓敏编.数学分析导教•导学•导考.西安:西北工业大学出版社,2003.
+[120].贺自树等编.数学分析习题课选讲.重庆:重庆大学出版社,2007.
+[121].李忠 方丽萍编.数学分析教程 上,2008.
+[122].李忠 方丽萍编.数学分析教程 下,2008.
+[123].梅加强编.《数学分析》高等教育出版社,2011.07.
+[124].邹应编.数学分析.上册.高等教育出版社.1995.
+[125].邹应编.数学分析.下册.高等教育出版社.1995.
+[126].郭大钧等编著.数学分析（上册）（第2版）,2002.
+[127].郭大钧等编著.数学分析（下册）（第2版）,2002.
+[128].沐定夷.数学分析（上）,1993.
+[129].沐定夷.数学分析（下）,1993.
+[130].欧阳光中，姚允龙，周渊编著.数学分析（上册）,2003.
+[131].欧阳光中，姚允龙，周渊编著.数学分析（下册）,2003.
+[132].数学分析-卷I-秦曾复、朱学炎-高等教育出版社1991.
+[133].数学分析-卷Ⅱ-秦曾复、朱学炎-高等教育出版社1991.
+[134].数学分析-卷Ⅲ-秦曾复、朱学炎-高等教育出版社1991.
+[135].数学分析1-徐森林,.薛春华.清华大学出版社,2005.
+[136].数学分析2-徐森林,薛春华.清华大学出版社,2007.
+[137].数学分析3-徐森林,金亚东,薛春华.清华大学出版社,2007.
+[138].数学分析精选习题全解(上)-薛春华,徐森林,2009.
+[139].数学分析精选习题全解(下)-薛春华,徐森林,2010.
+[140].伍胜健.数学分析 第二版，(第一册),北京大学数学教学系列丛书,2009.
+[141].伍胜健.数学分析 第二版，(第二册),北京大学数学教学系列丛书,2009.
+[142].伍胜健.数学分析 第二版，(第三册),北京大学数学教学系列丛书,2009.
+
+ 
+
+这里列的参考书，本论坛大部分都有电子版分享。
+其中所缺书有，欢迎书友们增补，以供大家学习交流：
+
+[46].李惜雯.数学分析例题解析及难点注释(上).西安:西安交通大学出版,2004.
+[47].李惜雯.数学分析例题解析及难点注释(下).西安:西安交通大学出版,2004.
+[50].王戈平编.数学分析选讲.徐州:中国矿业大学出版社,2002.
+[52].皱节铣,陈强编.数学试题选解(1980-1985全国招考研究生).长沙:湖南科学技术出版社,1986.
+[56].刘光祖,卢恩双主编.大学数学辅导与考研指导.北京:科学出版社,2002.
+[58].余长安主编.大学数学考研题型精讲与解题技巧集粹.北京:科学出版社,2005.
+[59].邵剑,陈维新,张继昌,何勇编著.大学数学考研专题复习.北京:科学出版,2001.
+[61].龚冬宝（保）主编.数学考研教程,第三版.西安:西北交通大学出版社,2004.
+[96].马富明,高文杰编著.数学分析(第二册).北京:高等教育出版社,2005.
+[107].朱永庚.数学分析(上).西安:陕西师范大学出版社,1989.
+
+
+
+
+
+
+
+
+
+
+
 [《常微分方程》-庞特里亚金](https://mp.weixin.qq.com/s?__biz=MzU5Mjk1ODEyMw==&mid=2247483926&idx=1&sn=8345812c9939b9efcd50ffd28822a348&scene=21#wechat_redirect)    
 [《俄罗斯数学教材选译-常微分方程》（庞特里亚金）](https://mp.weixin.qq.com/s?__biz=MzU5Mjk1ODEyMw==&mid=2247483926&idx=1&sn=8345812c9939b9efcd50ffd28822a348&scene=21#wechat_redirect)    
 [《常微分方程学习辅导与习题解答》/ 朱思铭](https://mp.weixin.qq.com/s?__biz=MzU5OTgwNzM3Ng==&mid=2247486190&idx=1&sn=41daaed6f4570a25d23d3a8bc0a1b424&scene=21#wechat_redirect)     
